--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 
     <!-- link css file -->
-    <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" href="./stylesheet/style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <!-- navbar -->
 
     <div class="nav">
-        <a href="#"><img src="./assets/images/logo.svg" alt="logo"></a>
+        <a href="#"><img src="/Zelt-Landing-Page/assets/images/logo.svg" alt="logo"></a>
         <div class="center-nav">
             <a href="#">Product</a>
             <a href="#">Resources</a>
@@ -1022,14 +1022,14 @@
                 </p>
             </div>
             <div class="right-page-9">
-                <video src="./assets/videos/first video.mp4" autoplay muted></video>
+                <video src="/Zelt-Landing-Page/assets/videos/first video.mp4" autoplay muted></video>
             </div>
         </div>
 
 
         <div class="page-10">
             <div class="left-page-10">
-                <video src="./assets/videos/second video.mp4" autoplay muted></video>
+                <video src="/Zelt-Landing-Page/assets/videos/second video.mp4" autoplay muted></video>
             </div>
             <div class="right-page-10">
                 <h1>Enabling</h1>
